--- a/TASK 1 - Landing page/index.html
+++ b/TASK 1 - Landing page/index.html
@@ -1,1 +1,95 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta htt-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NayanFitness - The best fitness gym in the town</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="utils.css">
+    <style type="text/css">
+        *{padding: 0; margin: 0; box-sizing: border-box;}
+        header{
+            width: 100%;
+            height: 100%;
+            background: url('background.jpg');
+            background-size:cover ;
+        }
+    </style>
+</head>
+<body class="overflow-hidden">
+    <div class="container mx-auto ">
+        <header>
+            <nav class="flex justify-between">
+                <div class="logo font-bold flex item-center  text-blue  hea">NayanFitness</div>
+<ul class="navbar flex item-center">
+    <li>Home</li>
+    <li>About</li>
+    <li>Services</li>
+    <li>Contact Us</li>
+    <li> <button class="btn">Join Now</button></li>
 
+</ul>
+</nav>
+<hr>
+        </header>
+        <main class="min-h-screen">
+<section class="section1">
+    <div class="flex  item-center">
+    <div class="topleft flex justify-center flex-col px-2">
+        <img src="dumbel.jpeg" style="align-self:center" width="350px"  alt="Dumbell">
+    <h1 class="my-1 text-center" style="font-size: 2rem"> The best fitness Gym in the town is here</h1>
+    <p class="text-center">An ideal gym is a no-brainer to become the fittest version of yourself. You get tons of perks in a premium gym that an ordinary one fails to offer.After all, you need to train with the best to become the best.</p>
+</div>
+    <div class="topright flex justify-center">
+        <img src="gym.jpg" alt="Gym" width="750" height="470"">
+    </div>
+</section>
+<hr>
+<section class="section2">
+<h1 class="text-center my-2">Pricing</h1>
+<p class="my-2">Take Your money Back if u don't get what u want. I am not here to mint the money "I have enough". No to "Supplements". Long life span "Physique". I am a MIXED MARTIAL ARTIST and Fitness Trainer with more than a decade experience of GYM and body building. I don't consider Activities related to Fitness or Sports "a job".</p>
+<div class="boxes flex justify-center ">
+    <div class="box"> 
+        <h2>Free</h2>
+        <ul>
+            <li class="highlighted">₹0/month</li>
+            <li>0 user includes</li>
+            <li>No Wifi</li>
+            <li>Email support</li>
+            <li>Help center access</li>
+            <li> <button class="btn">Signup Now</button></li>
+        </ul>
+    </div>
+    <div class="box"> 
+        <h2>Pro</h2>
+        <ul>
+            <li class="highlighted">₹150/month</li>
+            <li>1 user includes</li>
+            <li>Free Wifi</li>
+            <li>Email support</li>
+            <li>Help center access</li>
+            <li> <button class="btn">Signup Now</button></li>
+        </ul>
+    </div>
+    <div class="box"> 
+        <h2>Enterprise</h2>
+        <ul>
+            <li class="highlighted">₹500/month</li>
+            <li>3 user includes</li>
+            <li>Free Wifi</li>
+            <li>Email support</li>
+            <li>Help center access</li>
+            <li> <button class="btn">Signup Now</button></li>
+        </ul>
+    </div>    </div>
+</section>
+<hr>
+<section></section>
+        </main>
+        <footer>
+Copyright &copy; NayanFitness.com | All rights reserved
+        </footer>
+    </div>
+</body>
+</html>
